--- a/sistema-pizzaria/backend/package.json
+++ b/sistema-pizzaria/backend/package.json
@@ -13,8 +13,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "prisma": "^4.9.0"
   }
 }
